package animals;

public interface AnimalActivityInterface
{
    public void do_command();
}