package animals;

public interface LifeAnimalInterface
{
    public void eat();
    public void sleep();
    public void run();
}